resources/kubernetes/minikube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-cloud-microservices
  labels:
    name: spring-cloud-microservices
