resources/kubernetes/minikube/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: spring-cloud-microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: guillermoleonpy/config-server:1.0-snapshot
        ports:
        - containerPort: 8888
        imagePullPolicy: Always
      imagePullSecrets:
      - name: container-registry-secret
---

apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
  namespace: spring-cloud-microservices
spec:
  selector:
    app: config-server
  ports:
  - port: 8888
    targetPort: 8888
